# particulesGen_math

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: Particule.hpp  ParticuleList.hpp  World.hpp  mathProbabilitiesLib.hpp  worldVar.hpp
src/: Particule.cpp  ParticuleList.cpp  World.cpp  main.cpp  mathProbabilitiesLib.cpp
